--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -581,21 +581,25 @@ function masonryLayout() {
 	
 }
 
-function mobile_MasonryLayout() {
+//화면 레이아웃 추가
+function masonryLayout() {
 	
-	
-	$('.grid').masonry({
+	var msnry = new Masonry( '.grid', {
+
+			
 	  	  itemSelector: '.griditem',
 	  	  columnWidth: 360,
 	  	  gutter: 10,
 	  	  horizontalOrder: true,
 	  	  // originLeft: false //왼쪽부터 정렬 
 	  	  // originTop: false //바닥부터
-	  	 // transitionDuration: '0.2s' //위치 전환 시간
+	  	  //transitionDuration: '0.2s' //위치 전환 시간
 	});
 	
-	
-	
+	imagesLoaded( '.grid' ).on( 'progress', function() {
+		msnry.layout();
+	});
+		
 }
 
 
@@ -603,12 +607,11 @@ function mobile_MasonryLayout() {
 
 
 $( document ).ready(function() {
-	
 	 
   $("#pills-profile-tab").unbind("click").bind("click",function(){
-	  var artstSq= $("#artstSq").val();
 	  
-	     
+	  var artstSq= $("#artstSq").val();
+	  	     
 	  pageGoPost({
 			url:"/artistDetailWork",
 			target:"_self",
@@ -618,9 +621,6 @@ $( document ).ready(function() {
 		});
 		 
 	});
-	 
- 
-	 
 	 	
 });
 
