핀터레스트 - UI 수정

--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -886,7 +886,7 @@
 		  	  horizontalOrder: true,
 		  	  // originLeft: false //왼쪽부터 정렬 
 		  	  // originTop: false //바닥부터
-		  	  //transitionDuration: '0.2s' //위치 전환 시간
+		  	  transitionDuration: '0.2s' //위치 전환 시간
 		});
 		
 		imagesLoaded( '.grid' ).on( 'progress', function() {
