--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -33,7 +33,8 @@
     <script type="text/javascript" src="resources/js/common.js"></script>
     
     <script type="text/javascript" src="resources/js/masonry.pkgd.min.js"></script>
-    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script> <!-- 추가 -->
+    <script type="text/javascript" src="resources/js/imagesloaded.pkgd.min.js"></script>
+<!--     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script> 추가 -->
     
     <script type="text/javascript" src="resources/js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="resources/js/bootstrap-select.min.js"></script>
