--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
@@ -125,7 +125,7 @@ function myCollectionList(){
 				html += '<div >';
 				html += '<div class="item-div-img reg">';
 				//작품 이미지
-				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" width="360px;">';
+				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				html += '	<div class="item-ho3 reg-div">';
 				html += '		<div class="regs" >';
 				html += '			<a href="#" class="reg-a" workSq="'+ result[i].workSq +'"><span>거래 등록</span></a>';
