--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -42,10 +42,10 @@
 							<h2 th:text="${result.deal.artstActvtyNm}"></h2>
 							<h3 th:text="${result.deal.workNm}"></h3>
 							
-							<a href="#" class="phos" data-toggle="modal" data-target="#myModal3">
-								<div class="tootip-1">신고하기</div>
-								<img src="resources/img/de/popo-1.png" />
-							</a>
+<!-- 							<a href="#" class="phos" data-toggle="modal" data-target="#myModal3"> -->
+<!-- 								<div class="tootip-1">신고하기</div> -->
+<!-- 								<img src="resources/img/de/popo-1.png" /> -->
+<!-- 							</a> -->
 						</div>
 						
 						<table class="tstyle1">
@@ -57,7 +57,7 @@
 								<th>소재/기법</th>
 								<td th:text="${result.deal.workMatrl}">canvas</td>
 							</tr>
-							<tr>
+							<tr style="display:none">
 								<th>보증서</th>
 								<td th:if="${not #strings.isEmpty(result.deal.workGrtUrl)}">있음 <a href="javascript:openWorkGrtUrl();" class="mg_l30 por"><div class="tootip-2">보증서 보기</div><img src="resources/img/de/print-icon.jpg"/></a></td>
 								<td th:if="${#strings.isEmpty(result.deal.workGrtUrl)}">없음</td>
@@ -162,9 +162,12 @@
 							<span><img th:src="${result.artistInfo.artstProfileImgUrl}" style="width:100%; border-radius:15%;"/></span>
 						</div>
 						<div class="su-r">
-							<p class="sup-1" th:text="${result.artistInfo.artstActvtyNm}">이 용은</p>
-							<p class="sup-2" th:text="${result.artistInfo.artstEnglsNm}">Lee Yongeun</p>
-							<div class="sup-3 ellipsis" th:text="${result.artistInfo.artstSelfIntro}">이용은 작가는 사람들이 가진 고유의 향기를 매화 꽃으로 비유한다. 깨달은 사람을 뜻하는 ‘향 코끼리’는 작가만의 “꽃끼리(flowerphant)”로 새롭게 표현된다. 동양화를 전공한 작가는 코끼리의 ‘겹’을 구겨진 한지에 먹을 묻혀 표현하여 인생을 담아내고, 배경에 금을 많이 사용하여 ‘복’의 뜻을 더하는 등 의미를 더욱 풍부하게 담는다. 다채로운 배경의 팝적인 요소가 가미된 작품들은 올바른 깨달음을 나누고 원하는 색채의 삶을 만드는 긍정적 효과를 기대하였다면, 금박이 배경이 된 작품은 더 나아가 원하는 소망을 이룰 수 있다는 믿음이 더해진다. 작가는 꽃과 코끼리를 대조되는 친숙한 두 소재를 동서양의 물감을 다르게 바르는 등 조화롭게 풀어내어 독창적인 ‘꽃끼리’를 만들어 냈으며, 인간이 살면서 목표하는 진리에 더 가깝게 다가갈 수 있도록 도와준다. 다양한 방법으로 이상향을 담는 이용은 작가의 작품은 지속적인 발전을 통해 단단해지고 있어 앞으로의 성장이 더꽃끼리’를 만들어 냈으며, 인간이 살면서 목표하는 진리에 더 가깝게 다가갈 수 있도록 도와준다. 다양한 방법으로 이상향을 담는 이용은 작가의 작품은 지속적인 발전을 통해 단단해지고 있어 앞으로의 성장이 더. ....</div>
+							<p class="sup-1" th:text="${result.artistInfo.artstActvtyNm}"></p>
+							<p class="sup-2" th:text="${result.artistInfo.artstEnglsNm}"></p>
+							<div class="sup-3 ellipsis" th:text="${result.artistInfo.artstSelfIntro}"></div>
+							 
+							 
+  							
 						</div>
 					</div>
 				</div>
@@ -310,13 +313,9 @@
 			</div>
 			<div class="modal-body pd60 h850-o" id="artstInfoModal">
 				<div class="ad-text">
-					<h3 th:text="${result.artistInfo.artstActvtyNm}">이 용은</h3>
-					<h4 th:text="${result.artistInfo.artstEnglsNm}">Lee Yongeun</h4>
-					<p th:text="${result.artistInfo.artstSelfIntro}">
-						이용은 작가는 사람들이 가진 고유의 향기를 매화 꽃으로 비유한다. 깨달은 사람을 뜻하는 ‘향 코끼리’는 작가만의 “꽃끼리(flowerphant)”로 새롭게 표현된다. 동양화를 전공한 작가는 코끼리의 ‘겹’을 구겨진 한지에 먹을 묻혀 표현하여 인생을 담아내고, 배경에 금을 많이 사용하여 ‘복’의 뜻을 더하는 등 의미를 더욱 풍부하게 담는다. 다채로운 배경의 팝적인 요소가 가미된 작품들은 올바른 깨달음을 나누고 원하는 색채의 삶을 만드는 긍정적 효과를 기대하였다면, 금박이 배경이 된 작품은 더 나아가 원하는 소망을 이룰 수 있다는 믿음이 더해진다.
-						작가는 꽃과 코끼리를 대조되는 친숙한 두 소재를 동서양의 물감을 다르게 바르는 등 조화롭게 풀어내어 독창적인 ‘꽃끼리’를 만들어 냈으며, 인간이 살면서 목표하는 진리에 더 가깝게 다가갈 수 있도록 도와준다.
-						다양한 방법으로 이상향을 담는 이용은 작가의 작품은 지속적인 발전을 통해 단단해지고 있어 앞으로의 성장이 더 기대된다.
-					</p>
+					<h3 th:text="${result.artistInfo.artstActvtyNm}"></h3>
+					<h4 th:text="${result.artistInfo.artstEnglsNm}"></h4>
+					<p th:text="${result.artistInfo.artstSelfIntro}" id="artstSelfIntro"></p>
 				</div>
 				
 				<dl class="ad-dl">
@@ -365,33 +364,34 @@
 					</th:block>
 					</dd>
 				</dl>
-				<dl class="ad-dl">
-					<dt>수상</dt>
-					<dd>
-						<p>2020 Fly High, 충무로갤러리</p>
-						<p>2019 크리스마스 아트마켓, 갤러리오</p>
-						<p>2019 Falling in Animal, 비움갤러리</p>
-						<p>2019 취하다 아트페어, 프로타주갤러리</p>
-						<p>2019 be coming a collector, 연희예술극장</p>
-						<p>2019 이원생중계, 갤러리라메르</p>
-					</dd>
-				</dl>
-				<dl class="ad-dl">
-					<dt>인터뷰영상</dt>
-					<dd>
-						<p>https://youtu.be/bRY2uftc9pQ</p>
-						<p>https://youtu.be/bRY2uftc9pQ</p>
-					</dd>
-				</dl>
-				<dl class="ad-dl">
-					<dt>논문, 평론, 기사</dt>
-					<dd>
-						<p>2014 동심을 깨우는 강한 숨결 전, 전북대학교 국립 박물관</p>
-						<p>2013 50만원 전, 경민미술관</p>
-						<p>2013 가미갤러리 초대작가전, 가미갤러리</p>
-						<p>2013 블라블라, 인사토포하우스</p>
-					</dd>
-				</dl>
+				
+<!-- 				<dl class="ad-dl"> -->
+<!-- 					<dt>수상</dt> -->
+<!-- 					<dd> -->
+<!-- 						<p>2020 Fly High, 충무로갤러리</p> -->
+<!-- 						<p>2019 크리스마스 아트마켓, 갤러리오</p> -->
+<!-- 						<p>2019 Falling in Animal, 비움갤러리</p> -->
+<!-- 						<p>2019 취하다 아트페어, 프로타주갤러리</p> -->
+<!-- 						<p>2019 be coming a collector, 연희예술극장</p> -->
+<!-- 						<p>2019 이원생중계, 갤러리라메르</p> -->
+<!-- 					</dd> -->
+<!-- 				</dl> -->
+<!-- 				<dl class="ad-dl"> -->
+<!-- 					<dt>인터뷰영상</dt> -->
+<!-- 					<dd> -->
+<!-- 						<p>https://youtu.be/bRY2uftc9pQ</p> -->
+<!-- 						<p>https://youtu.be/bRY2uftc9pQ</p> -->
+<!-- 					</dd> -->
+<!-- 				</dl> -->
+<!-- 				<dl class="ad-dl"> -->
+<!-- 					<dt>논문, 평론, 기사</dt> -->
+<!-- 					<dd> -->
+<!-- 						<p>2014 동심을 깨우는 강한 숨결 전, 전북대학교 국립 박물관</p> -->
+<!-- 						<p>2013 50만원 전, 경민미술관</p> -->
+<!-- 						<p>2013 가미갤러리 초대작가전, 가미갤러리</p> -->
+<!-- 						<p>2013 블라블라, 인사토포하우스</p> -->
+<!-- 					</dd> -->
+<!-- 				</dl> -->
 			</div>
 		</div>
 	</div>
@@ -401,7 +401,32 @@
 
 
 <script th:inline="javascript">
+
+var isMobileBidding = /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ? true : false;
+
+jQuery(document).ready(function($){
+     
+	if(isMobile) {
+		
+		var baseW = $(window).width();
+		
+		var ww = 0;
+		
+		if(baseW < 399) {
+			ww = $(window).width()-50;	
+		} else {
+			ww = $(window).width()-250;
+		}
+		
+		$(".ellipsis").width(ww);
+		$(".ellipsis").height('320px');
+		
+		$(".ellipsis").css('padding',20);
+     }
+});
+
 $('.selectpicker').selectpicker('render');
+
 var result = /*[[${result}]]*/ 'default';
 var workGrtUrl = new Image();
 workGrtUrl.src = result.deal.workGrtUrl;
@@ -654,9 +679,6 @@ function selectBoxWriteAskingPrice(){
   
 });
  
- 
- 
- 
  /* 메뉴바 FIXED */
  if (jQuery(window).width() > 0) {
      jQuery(window).on("scroll",function(ev){
@@ -670,36 +692,6 @@ function selectBoxWriteAskingPrice(){
      });
  }
  
- 
- /* jQuery(function($) {
-
-    window.onresize = function(){
-      document.location.reload();
-    };
-
-}); */
- 
- 
- 
- var delay = 300;
- var timer = null;
-
- //Javascript
- window.addEventListener('resize', function(){
- 	clearTimeout(timer);
- 	timer = setTimeout(function(){
- 		document.location.reload();
- 	}, delay);
- });
-
- //jQuery
- $(window).on('resize', function(){
- 	clearTimeout(timer);
- 	timer = setTimeout(function(){
- 		document.location.reload();
- 	}, delay);
- });
- 
  $('ul.dropdown-menu.mega-dropdown-menu').on('click', function(event){
     // The event won't be propagated up to the document NODE and 
     // therefore delegated events won't be fired
@@ -707,8 +699,7 @@ function selectBoxWriteAskingPrice(){
 });
  
 </script>
-    
-	
+
 	
 	
 	
