--- a/src/main/resources/templates/thymeleaf/fo/mgz/exhibition.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/exhibition.html
@@ -216,25 +216,7 @@
     	}); */
       
       
-      
-      var delay = 300;
-      var timer = null;
-
-      //Javascript
-      window.addEventListener('resize', function(){
-      	clearTimeout(timer);
-      	timer = setTimeout(function(){
-      		document.location.reload();
-      	}, delay);
-      });
-
-      //jQuery
-      $(window).on('resize', function(){
-      	clearTimeout(timer);
-      	timer = setTimeout(function(){
-      		document.location.reload();
-      	}, delay);
-      });
+   
       
       $('ul.dropdown-menu.mega-dropdown-menu').on('click', function(event){
     	    // The event won't be propagated up to the document NODE and 
@@ -318,6 +300,17 @@
                 	if(data.result != null){
                     	$("#lp_mgz9Dtl_cntnt").empty();
                     	$("#lp_mgz9Dtl_cntnt").append(data.result.mgzContent).trigger("create");
+                    	
+                    	var appDevice =	$("#appDevice").val();
+                 		
+                 		if(appDevice == "MOBILE") {
+                      	
+                      		$("#lp_mgz9Dtl_cntnt > div").css('font-size', '11px');
+             				$("#lp_mgz9Dtl_cntnt > div").css('padding-left', '0px');
+             			    $("#lp_mgz9Dtl_cntnt > div").css('padding-right', '0px');
+             			    
+                 		}
+                    	
                 	}else{
                 		modalAlertShow("검색 결과가 없습니다."); 
                 		$("#lp_mgz9Dtl_cntnt").empty();
