--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -50,6 +50,17 @@
 		  padding-right:0 !important;
 		}
    </style>
+   
+   <script>
+		var isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ? true : false;
+		jQuery(document).ready(function($){
+		     if(!isMobile) {
+		         $("#appDevice").val("PC");
+		     } else {
+		     	 $("#appDevice").val("MOBILE"); 
+		     }
+		});
+  </script>
     
 </head>
 <body>
@@ -58,6 +69,8 @@
 	<div th:text="${session.sMbrSqVal}" style="display:none"></div>
 	<div th:text="${session.sAuthSqVal}" style="display:none"></div>
 	<input type="hidden" id="sMbrSqVal">
+	<!-- 접속 Divice 체크 -->
+	<input type="hidden" id="appDevice">
 		
 		<div class="head">
 			<div class="h-logo"><a href="/main"><img src="resources/img/logo.png" /></a></div>
